<resources>
    <string name="app_name">Demo App</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="employees">Employees</string>
    <string name="students">Students</string>
    <string name="notice_home_syllabus">Notice/Home/Syllabus</string>
    <string name="attendence">Attendance</string>
    <string name="marks">Marks</string>
    <string name="timetable">TimeTable</string>
    <string name="class_rooms">Class-Rooms</string>
    <string name="transport">Transport</string>
    <string name="delete">Delete</string>
    <string name="fees">Fees</string>
    <string name="gallery">Gallery</string>
    <string name="visitors">Visitors</string>>
    <string name="employee_registration">Employee Registration</string>
    <string name="employee_updates">Employee Updates</string>
    <string name="search_employees">Search Employees</string>
    <string name="employee_credentials">Employee Credentials</string>
    <string name="student_registration">Student Registration</string>
    <string name="student_updates">Student Updates</string>
    <string name="student_credentials">Student Credentials</string>
    <string name="search_students">Search Students</string>
    <string name="bulk_upload">Bulk Upload</string>
    <string name="teacher_attendence_report">Teacher Attendance Report</string>
    <string name="teacher_attendence">Teacher Attendance</string>
    <string name="student_attendence_report">Student Attendance Report</string>
    <string name="student_attendence">Student Attendance</string>
    <string name="add_syllabus">Add Syllabus</string>
    <string name="notice_to_class">Notice to Class</string>
    <string name="home_work">Home Work</string>
    <string name="notice_to_student">Notice to Student</string>
    <string name="add_visitor">Add Visitor</string>
    <string name="visitor_list">Visitor List</string>
    <string name="routes_report">Routes Report</string>
    <string name="routes">Routes</string>
    <string name="route_wise_attendence">Route Wise Attendance</string>
    <string name="driver">Driver</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_list">Vehicle List</string>
    <string name="get_deleted_employees_data">Get Deleted Employees Data</string>
    <string name="add_album">Add Album</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="delete_student_details">Delete Student Details</string>
    <string name="get_deleted_students_data">Get Deleted Students Data</string>
    <string name="delete_employee_details">Delete Employee Details</string>
    <string name="fee_collection_report">Fee Collection Report</string>
    <string name="search_defaulter">Search Defaulter</string>
    <string name="view_timetable_details">View TimeTable Details</string>
    <string name="add_timetable_detail">Add TimeTable Detail</string>
    <string name="set_fee_category">Set Fee Category</string>
    <string name="fee_collection">Fee Collection</string>
    <string name="fee_cycle">Fee Cycle</string>
    <string name="add_fee_discount">Add Fee Discount</string>
    <string name="fine">Fine</string>
    <string name="class_fee_collection">Class Fee Collection</string>
    <string name="add_classroom">Add ClassRoom</string>
    <string name="marks_home">Marks Home</string>
    <string name="class_report">Class Report</string>
    <string name="report_card">Report Card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
